crates/yamlito/tests/snapshots/parser__cst_snapshots@scalar__bool_false.yml.snap
---
source: tests/parser.rs
expression: "ito::debug::cst_string(&tree)"
input_file: tests/yaml/scalar/bool_false.yml
---
STREAM@0..6
  DOCUMENT@0..5
    SCALAR@0..5
      PLAIN_SCALAR@0..5 "false"
  NEWLINE@5..6 "\n"
