crates/yamlito/tests/snapshots/parser__cst_snapshots@scalar__bool_true.yml.snap
---
source: tests/parser.rs
expression: "ito::debug::cst_string(&tree)"
input_file: tests/yaml/scalar/bool_true.yml
---
STREAM@0..5
  DOCUMENT@0..4
    SCALAR@0..4
      PLAIN_SCALAR@0..4 "true"
  NEWLINE@4..5 "\n"
