crates/yamlito/tests/snapshots/parser__cst_snapshots@scalar__double_quoted.yml.snap
---
source: tests/parser.rs
expression: "ito::debug::cst_string(&tree)"
input_file: tests/yaml/scalar/double_quoted.yml
---
STREAM@0..19
  DOCUMENT@0..18
    SCALAR@0..18
      DOUBLE_QUOTED_SCALAR@0..18 "\"line\\nbreak\\ttab\""
  NEWLINE@18..19 "\n"
