crates/yamlito/tests/snapshots/parser__cst_snapshots@scalar__literal_block.yml.snap
---
source: tests/parser.rs
expression: "ito::debug::cst_string(&tree)"
input_file: tests/yaml/scalar/literal_block.yml
---
STREAM@0..24
  DOCUMENT@0..24
    SCALAR@0..24
      LITERAL_SCALAR@0..24 "|\n  line one\n  line two\n"
